--- a/로그인.html
+++ b/로그인.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>HTML교육 - 로그인</title>
+    <title> HTML교육 - 로그인(구경은 돈 안받음)</title>
     <meta name="keywords" content="로그인">
     <meta name="description" content="gsitm 로그인 페이지">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style_intro.css">
   </head>
   <body>
     <div id="page-wrapper">
@@ -17,7 +17,7 @@
       </header>
       <div id="content">
         <section id="main-section">
-          <form class="login-form">
+          <form class="login-form" method="post">
             <fieldset>
               <table id="login-table">
                 <tr>
@@ -26,19 +26,19 @@
                 </tr>
                 <tr>
                   <td><span class="login-pw-title">비밀번호</span></td>
-                  <td><input type="text" class="login-pw" /></td>
+                  <td><input type="password" class="login-pw" /></td>
                 </tr>
               </table>
               <div id="submit">
-              <input class="login-submit" type="submit" value="로그인" />
-              <input class="register-submit" type="submit" value="회원가입" />
+              <input class="login-submit" type="submit" value="로그인" onClick="window.location.href='게시판목록.html'; return false;"/>
+              <input class="register-submit" type="submit" value="회원가입" onClick="window.location.href='회원가입.html'; return false;"/>
               </div>
             </fieldset>
           </form>
         </section>
       </div>
       <footer id="main-footer">
-        <a href="#">Created By PARKSOHYUN </a>
+        <a href="#">Created By PARKSOHYUN</a>
       </footer>
     </div>
   </body>
